--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -71,8 +71,8 @@ default.send.label=Send {0}
 default.load.label=Load {0}
 default.plan.label=Plan {0}
 default.toggle.label=Show/hide {0}
-default.add.selected.label=Add selected item(s) to "{0}"
-default.remove.selected.label=Remove selected item(s) from "{0}"
+default.add.selected.label=Add selected item(s) to {0}
+default.remove.selected.label=Remove selected item(s) from {0}
 default.edit.menu.label=Edit menu \u00bb
 default.overview.menu.label=Overviews menu \u00bb
 default.admin.menu.label=Admin menu \u00bb
@@ -126,12 +126,12 @@ springSecurity.login.lost.password=If you have lost your password, please go to:
 # Forgot password page
 springSecurity.forgot.title=Forgot password
 springSecurity.forgot.header=Request a new password
-springSecurity.forgot.button=New password
+springSecurity.forgot.button=Send request
 springSecurity.forgot.username.label=Login
 springSecurity.forgot.error=Sorry, we couldn't create a new password for you at this moment
 springSecurity.forgot.fail=Sorry. we were not able to find a user with that login
 springSecurity.forgot.success=A new password has been send to you by mail
-springSecurity.forgot.code.request=An email with further instructions has been send to you by mail
+springSecurity.forgot.code.request=An email with further instructions has been sent to you by mail
 springSecurity.forgot.code.incorrect=The code is incorrect, please request a new code
 springSecurity.forgot.code.expired=The code has expired, please request a new code
 springSecurity.forgot.password.sent=A new password has already been sent to you, please check your email
