PayWay orders can now also be created with the CMS

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -48,6 +48,7 @@ default.no.id.message=Please provide an id
 default.no.email.message=Please provide an email address
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
 default.successful.message=Saving of "{0}" was successful
+default.not.successful.message=Saving of "{0}" was not successful
 default.not.allowed.message=Unfortunately this is not allowed
 default.does.not.exist=This page does not exist
 default.does.not.exist.message=Unfortunately this page does not exist
@@ -495,6 +496,7 @@ order.status.refund.bank.label=Bank refund
 order.method.label=Payment method
 order.method.bank.label=Bank payment
 order.method.ogone.label=Online payment
+order.method.cash.label=Cash payment
 order.created.at.label=Created at
 order.updated.at.label=Updated at
 order.refunded.at.label=Refunded at
