--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -48,6 +48,7 @@ default.no.id.message=Geef astublieft een id op
 default.no.email.message=Geef astublieft een emailadres op
 default.optimistic.locking.failure=Een andere gebruiker heeft deze {0} al gewijzigd
 default.successful.message=Opslaan van "{0}" was succesvol
+default.not.successful.message=Opslaan van "{0}" was niet succesvol
 default.not.allowed.message=Helaas is dit niet toegestaan
 default.does.not.exist=Deze pagina bestaat niet
 default.does.not.exist.message=Helaas bestaat deze pagina niet
@@ -494,7 +495,7 @@ order.status.refund.ogone.label=Online terugbetaling
 order.status.refund.bank.label=Bank terugbetaling
 order.method.label=Payment method
 order.method.bank.label=Bank betaling
-order.method.ogone.label=Online betaling
+order.method.cash.label=Cash betaling
 order.created.at.label=Gecre\u00eberd op
 order.updated.at.label=Update op
 order.refunded.at.label=Terug betaald op
