Various small updates and upgrades

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -230,6 +230,7 @@ network.label=Network
 network.multiple.label=Networks
 network.name.label=Name
 network.comment.label=Comment
+network.longDescription.label=Long description
 network.url.label=URL
 network.email.label=E-mail
 network.showOnline.label=Show online
