--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -230,6 +230,7 @@ network.label=Netwerk
 network.multiple.label=Netwerken
 network.name.label=Naam
 network.comment.label=Commentaar
+network.longDescription.label=Uitgebreide beschrijving
 network.url.label=URL
 network.email.label=E-mail
 network.showOnline.label=Online weergeven
