Changed the fee amount endDate labels

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -304,7 +304,7 @@ feeState.isAccompanyingPersonFee.label=Is accompanying person fee
 # Fee amount related messages
 feeAmount.label=Fee amount
 feeAmount.multiple.label=Fee amounts
-feeAmount.endDate.label=End date
+feeAmount.endDate.label=Last date
 feeAmount.numDaysStart.label=Nr of days start
 feeAmount.numDaysEnd.label=Nr of days end
 feeAmount.numDays.label=Nr of days
