--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -304,7 +304,7 @@ feeState.isAccompanyingPersonFee.label=Is vergoeding voor extra personen
 # Fee amount related messages
 feeAmount.label=Vergoedings bedrag
 feeAmount.multiple.label=Vergoedings bedragen
-feeAmount.endDate.label=Eind datum
+feeAmount.endDate.label=Laatste datum
 feeAmount.numDaysStart.label=Nr. dagen start
 feeAmount.numDaysEnd.label=Nr. dagen eind
 feeAmount.numDays.label=Aantal dagen
