New 'comment' column in settings

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -159,6 +159,7 @@ setting.label=Setting
 setting.multiple.label=Settings
 setting.property.label=Property
 setting.value.label=Value
+setting.comment.label=Comment
 
 # Requestmap related messages
 requestMap.label=Request map
