--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -159,6 +159,7 @@ setting.label=Instelling
 setting.multiple.label=Instellingen
 setting.property.label=Eigenschap
 setting.value.label=Waarde
+setting.comment.label=Commentaar
 
 # Requestmap related messages
 requestMap.label=Verzoek
