--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -14,6 +14,7 @@ default.blank.message={0} cannot be blank
 default.not.equal.message={0} with value "{2}" cannot equal "{3}"
 default.null.message={0} cannot be empty
 default.not.unique.message={0} cannot be changed. {0} must be unique. There is another with {0} "{2}"
+default.not.unique.email.message=The email addresss cannot be changed. The email address must be unique. There is already another participant with the same email "{0}" in the current or another conference.
 default.exists.message="{0}" already exists as {1}
 
 default.paginate.prev=Previous
