--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -14,6 +14,7 @@ default.blank.message={0} mag niet leeg zijn
 default.not.equal.message={0} met waarde "{2}" mag niet gelijk zijn aan "{3}"
 default.null.message={0} mag niet leeg zijn
 default.not.unique.message={0} kan niet worden veranderd. {0} moet uniek zijn. Er is al \u00e9\u00e9n met {0} "{2}"
+default.not.unique.email.message=Het emailadres kan niet worden veranderd. Het emailadres moet uniek zijn. Er is al een andere deelnemer met het emailadres "{0}" in de huidige of een andere conferentie.
 default.exists.message="{0}" bestaat al als {1}
 
 default.paginate.prev=Vorige
