- Participant state and fee state language changes - Fixed initial connection pool size missing parameter - Updated Spring Security dependency

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -323,8 +323,8 @@ participantState.state.label=State
 # Participant date related messages
 participantDate.label=Participant
 participantDate.multiple.label=Participants
-participantDate.state.label=Current state
-participantDate.feeState.label=Current fee state
+participantDate.state.label=Participant state
+participantDate.feeState.label=Fee state
 participantDate.dateAdded.label=Event date added
 participantDate.invitationLetterRequested.label=Requested
 participantDate.invitationLetterSent.label=Sent
