--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -323,8 +323,8 @@ participantState.state.label=Status
 # Participant date related messages
 participantDate.label=Deelnemer
 participantDate.multiple.label=Deelnemers
-participantDate.state.label=Huidige status
-participantDate.feeState.label=Huidige vergoedingsstatus
+participantDate.state.label=Deelnemer status
+participantDate.feeState.label=Vergoedingsstatus
 participantDate.dateAdded.label=Datum evenement toegevoegd
 participantDate.invitationLetterRequested.label=Aangevraagd
 participantDate.invitationLetterSent.label=Verzonden
