Small text improvement

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -518,7 +518,7 @@ payment.by.amount.label=By amount
 payment.by.participant.state.label=By participant state
 payment.unconfirmed.label=Unconfirmed
 payment.confirmed.label=Confirmed
-payment.total.label=Total (unconfirmed/confirmed)
+payment.total.label=Total
 payment.total.participants.label=Total number of participants (Participants with state 1,2 only)
 payment.number.participants.label=Number of participants
 payment.number.payed.label=Total payed
