--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -516,7 +516,7 @@ payment.by.amount.label=Per bedrag
 payment.by.participant.state.label=Per deelnemer status
 payment.unconfirmed.label=Niet bevestiged
 payment.confirmed.label=Bevestigd
-payment.total.label=Total (niet bevestigd/bevestigd)
+payment.total.label=Totaal
 payment.total.participants.label=Totaal aantal deelnemers (Alleen deelnemers met status 1,2)
 payment.number.participants.label=Aantal deelnemers
 payment.number.payed.label=Totaal betaald
