Add a menu filter

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -146,6 +146,7 @@ springSecurity.denied.message=Sorry, you're not authorized to view this page
 springSecurity.loggedin.welcome=Welcome {0}
 
 # Menu related messages
+menu.filter.label=Filter on menu items
 menu.personalpage=Personal page
 menu.usersoverview=Users overview
 menu.logout=Log out
