--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -146,6 +146,7 @@ springSecurity.denied.message=Sorry, u heeft geen toegang tot deze pagina
 springSecurity.loggedin.welcome=Welkom {0}
 
 # Menu related messages
+menu.filter.label=Filter op menu items
 menu.personalpage=Persoonlijke pagina
 menu.usersoverview=Gebruikers overzicht
 menu.logout=Uitloggen
