Consistent use of the words email or e-mail

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,7 +1,7 @@
 default.doesnt.match.message={0} with value "{2}" does not match the required pattern "{3}"
 default.invalid.url.message={0} with value "{2}" is not a valid URL
 default.invalid.creditCard.message={0} with value "{2}" is not a valid credit card number
-default.invalid.email.message={0} with value "{2}" is not a valid e-mail address
+default.invalid.email.message={0} with value "{2}" is not a valid email address
 default.invalid.range.message={0} with value "{2}" does not fall within the valid range from {3} to {4}
 default.invalid.size.message={0} with value "{2}" does not fall within the valid size range from {3} to {4}
 default.invalid.max.message={0} with value "{2}" exceeds maximum value {3}
@@ -235,7 +235,7 @@ network.name.label=Name
 network.comment.label=Comment
 network.longDescription.label=Long description
 network.url.label=URL
-network.email.label=E-mail
+network.email.label=Email
 network.showOnline.label=Show online
 network.showInternal.label=Show internal
 network.chairs.label=Chairs
@@ -462,18 +462,18 @@ electionsAdvisoryBoard.nameCandidate.label=Name of the candidate
 electionsAdvisoryBoard.noOfVotes.label=Number of votes
 
 # Email related messages
-email.label=E-mail
-email.multiple.label=E-mails
+email.label=Email
+email.multiple.label=Emails
 email.from.label=Email from
 email.to.label=Email to
 email.subject.label=Email subject
 email.body.label=Email message
 email.info.label=Returned info:
 email.test.label=Send test mail
-email.send.label=Send e-mail
-email.send.multiple.label=Send e-mails
-email.resend.label=Resend e-mail
-email.send.now.label=Send e-mail now
+email.send.label=Send email
+email.send.multiple.label=Send emails
+email.resend.label=Resend email
+email.send.now.label=Send email now
 email.all.participants.label=Send to all qualified participants
 email.select.label=Select type of mail recipients
 email.edit.template.label=Edit template in a new window
@@ -484,7 +484,7 @@ email.date.created.label=Date/time created
 email.date.sent.label=Date/time sent
 email.original.sent.label=Original email sent
 email.copies.sent.label=Copies of this email sent
-email.background.message=E-mail for {0} participant(s) is being processed in the background, you may leave this page
+email.background.message=Email for {0} participant(s) is being processed in the background, you may leave this page
 
 # Order related messages
 order.label=Order
