--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -1,7 +1,7 @@
 default.doesnt.match.message={0} met waarde "{2}" komt niet overeen met het vereiste patroon "{3}"
 default.invalid.url.message={0} met waarde "{2}" is geen geldige URL
 default.invalid.creditCard.message={0} met waarde "{2}" is geen geldig credit card nummer
-default.invalid.email.message={0} met waarde "{2}" is geen geldig e-mailadres
+default.invalid.email.message={0} met waarde "{2}" is geen geldig emailadres
 default.invalid.range.message={0} met waarde "{2}" valt niet in de geldige waardenreeks van {3} tot {4}
 default.invalid.size.message={0} met waarde "{2}" valt niet in de geldige grootte van {3} tot {4}
 default.invalid.max.message={0} met waarde "{2}" overschrijdt de maximumwaarde {3}
@@ -235,7 +235,7 @@ network.name.label=Naam
 network.comment.label=Commentaar
 network.longDescription.label=Uitgebreide beschrijving
 network.url.label=URL
-network.email.label=E-mail
+network.email.label=Email
 network.showOnline.label=Online weergeven
 network.showInternal.label=Intern weergeven
 network.chairs.label=Chairs
@@ -413,15 +413,15 @@ sessionDateTime.indexNumber.label=Index
 sessionDateTime.period.label=Periode
 
 # Email code related messages
-emailCode.label=E-mail code
-emailCode.multiple.label=E-mail codes
+emailCode.label=Email code
+emailCode.multiple.label=Email codes
 emailCode.code.label=Code
 emailCode.description.label=Beschrijving
 emailCode.groovyScript.label=Groovy script
 
 # Email template related messages
-emailTemplate.label=E-mail sjabloon
-emailTemplate.multiple.label=E-mail sjablonen
+emailTemplate.label=Email sjabloon
+emailTemplate.multiple.label=-mail sjablonen
 emailTemplate.description.label=Beschrijving
 emailTemplate.subject.label=Mail onderwerp
 emailTemplate.body.label=Mail bericht
@@ -429,8 +429,8 @@ emailTemplate.sender.label=Naam afzender
 emailTemplate.comment.label=Commentaar
 emailTemplate.sortOrder.label=Sorteer volgorde
 emailTemplate.showInBackend.label=Tonen in backend
-emailTemplate.testEmail.label=Verstuur test e-mail naar
-emailTemplate.testAfterSave.label=Na opslaan e-mail testen
+emailTemplate.testEmail.label=Verstuur test email naar
+emailTemplate.testAfterSave.label=Na opslaan email testen
 
 # Group related messages
 group.label=Groep
@@ -462,29 +462,29 @@ electionsAdvisoryBoard.nameCandidate.label=Naam van de kandidaat
 electionsAdvisoryBoard.noOfVotes.label=Totaal aantal stemmen
 
 # Email related messages
-email.label=E-mail
-email.multiple.label=E-mails
-email.from.label=E-mail van
-email.to.label=E-mail Aan
-email.subject.label=E-mail Onderwerp
-email.body.label=E-mail Bericht
+email.label=Email
+email.multiple.label=Emails
+email.from.label=Email van
+email.to.label=Email Aan
+email.subject.label=Email Onderwerp
+email.body.label=Email Bericht
 email.info.label=Geretourneerde info:
 email.test.label=Verstuur test mail
-email.send.label=Verstuur e-mail
-email.send.multiple.label=Verstuur e-mails
-email.resend.label=Verzend e-mail nogmaals
-email.send.now.label=Verzend e-mail nu
+email.send.label=Verstuur email
+email.send.multiple.label=Verstuur emails
+email.resend.label=Verzend email nogmaals
+email.send.now.label=Verzend email nu
 email.all.participants.label=Verstuur naar alle in aanmerking komende deelnemers
-email.select.label=Selecteer type e-mail ontvangers
+email.select.label=Selecteer type email ontvangers
 email.edit.template.label=Wijzig template in een nieuw tabblad
-email.refresh.preview.label=Herlaad e-mail preview
-email.not.yet.sent.label=Nog niet verzonden e-mails
-email.sent.label=Verzonden E-mails
+email.refresh.preview.label=Herlaad email preview
+email.not.yet.sent.label=Nog niet verzonden emails
+email.sent.label=Verzonden Emails
 email.date.created.label=Datum/tijd gecreëerd
 email.date.sent.label=Datum/tijd verzonden
-email.original.sent.label=Originele e-mail verzonden
-email.copies.sent.label=Kopieën van deze e-mail verzonden
-email.background.message=E-mail voor {0} deelnemer(s) worden in de achtergrond verwerkt, u mag deze pagina verlaten
+email.original.sent.label=Originele email verzonden
+email.copies.sent.label=Kopieën van deze email verzonden
+email.background.message=Email voor {0} deelnemer(s) worden in de achtergrond verwerkt, u mag deze pagina verlaten
 
 # Order related messages
 order.label=Bestelling
