Users can now duplicate email templates

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -43,7 +43,9 @@ default.help.autocomplete.text=To search for a participant, please specify at le
 default.created.message={0} "{1}" is created
 default.updated.message={0} "{1}" is updated
 default.deleted.message={0} "{1}" is deleted
+default.duplicated.message={0} "{1}" is duplicated
 default.not.deleted.message={0} "{1}" could not be deleted
+default.not.duplicated.message={0} "{1}" could not be duplicated
 default.not.found.message={0} could not be found
 default.no.id.message=Please provide an id
 default.no.email.message=Please provide an email address
@@ -90,11 +92,12 @@ default.button.save.label=Save
 default.button.save.close.label=Save & Close
 default.button.cancel.label=Cancel
 default.button.delete.label=Delete
+default.button.duplicate.label=Duplicate
 default.button.back.label=Back
 default.button.search.label=Search
 default.button.searchin.label=Search in
 default.button.selectall.label=Select all
-default.button.delete.confirm.message=Are you sure?
+default.button.confirm.message=Are you sure?
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
