--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -43,7 +43,9 @@ default.help.autocomplete.text=Om een bepaalde deelnemer op te zoeken, astublief
 default.created.message={0} "{1}" is ingevoerd
 default.updated.message={0} "{1}" is gewijzigd
 default.deleted.message={0} "{1}" is verwijderd
+default.duplicated.message={0} "{1}" is gedupliceerd
 default.not.deleted.message={0} "{1}" kon niet worden verwijderd
+default.not.duplicated.message={0} "{1}" kon niet worden gedupliceerd
 default.not.found.message={0} kon niet worden gevonden
 default.no.id.message=Geef astublieft een id op
 default.no.email.message=Geef astublieft een emailadres op
@@ -90,11 +92,12 @@ default.button.delete.label=Verwijderen
 default.button.save.label=Opslaan
 default.button.save.close.label=Opslaan & Sluiten
 default.button.cancel.label=Annuleren
+default.button.duplicate.label=Dupliceer
 default.button.back.label=Terug
 default.button.search.label=Zoeken
 default.button.searchin.label=Zoek in
 default.button.selectall.label=Selecteer alles
-default.button.delete.confirm.message=Weet je het zeker?
+default.button.confirm.message=Weet je het zeker?
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Attribuut {0} is geen geldige URL
