Extras can now also be used during pre-registration

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -381,6 +381,8 @@ extra.extra.label=Title in CMS
 extra.description.label=Short description for users
 extra.secondDescription.label=Detailed description for users
 extra.amount.label=Amount
+extra.isFinalRegistration.label=Is part of the final registration instead of the pre-registration?
+extra.sortOrder.label=Sort order
 
 # Volunteering related messages
 volunteering.label=Volunteering job
