--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -381,6 +381,8 @@ extra.extra.label=Titel in de CMS
 extra.description.label=Korte beschrijving voor gebruikers
 extra.secondDescription.label=Uitgebreide beschrijving voor gebruikers
 extra.amount.label=Bedrag
+extra.isFinalRegistration.label=Is onderdeel van de final registration in plaats van de pre-registration?
+extra.sortOrder.label=Sorteer volgorde
 
 # Volunteering related messages
 volunteering.label=Vrijwilligers werk
