--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -478,6 +478,7 @@ email.test.label=Send test mail
 email.send.label=Send email
 email.send.multiple.label=Send emails
 email.resend.label=Resend email
+email.resend.registration.label=Resend registration completed email
 email.send.now.label=Send email now
 email.all.participants.label=Send to all qualified participants
 email.select.label=Select type of mail recipients
