--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -478,6 +478,7 @@ email.test.label=Verstuur test mail
 email.send.label=Verstuur email
 email.send.multiple.label=Verstuur emails
 email.resend.label=Verzend email nogmaals
+email.resend.registration.label=Verzend registratie compleet email nogmaals
 email.send.now.label=Verzend email nu
 email.all.participants.label=Verstuur naar alle in aanmerking komende deelnemers
 email.select.label=Selecteer type email ontvangers
