Extras (final & pre)

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -383,6 +383,8 @@ extra.secondDescription.label=Detailed description for users
 extra.amount.label=Amount
 extra.isFinalRegistration.label=Is part of the final registration instead of the pre-registration?
 extra.sortOrder.label=Sort order
+extra.final.label=Extras list (final)
+extra.pre.label=Extras list (pre)
 
 # Volunteering related messages
 volunteering.label=Volunteering job
