--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -383,6 +383,8 @@ extra.secondDescription.label=Uitgebreide beschrijving voor gebruikers
 extra.amount.label=Bedrag
 extra.isFinalRegistration.label=Is onderdeel van de final registration in plaats van de pre-registration?
 extra.sortOrder.label=Sorteer volgorde
+extra.final.label=Extras lijst (final)
+extra.pre.label=Extras lijst (pre)
 
 # Volunteering related messages
 volunteering.label=Vrijwilligers werk
