Also allow fee amount for payment on site

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -315,9 +315,11 @@ feeAmount.numDaysStart.label=Nr of days start
 feeAmount.numDaysEnd.label=Nr of days end
 feeAmount.numDays.label=Nr of days
 feeAmount.feeAmount.label=Fee amount
+feeAmount.feeAmountOnSite.label=(on site)
 feeAmount.substituteName.label=Substitute name
 feeAmount.validation.max.message=You exceeded the maximum number of days possible
 feeAmount.validation.end.message=Ending day must be bigger or equal to starting day
+feeAmount.validation.onsite.message=Fee amount (on site) is less than the regular fee amount
 
 # Participant state related messages
 participantState.label=Participant state
