--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -315,9 +315,11 @@ feeAmount.numDaysStart.label=Nr. dagen start
 feeAmount.numDaysEnd.label=Nr. dagen eind
 feeAmount.numDays.label=Aantal dagen
 feeAmount.feeAmount.label=Bedrag
+feeAmount.feeAmountOnSite.label=(op locatie)
 feeAmount.substituteName.label=Vervangende naam
 feeAmount.validation.max.message=U heeft het mogelijke maximum aantal dagen overschreden
 feeAmount.validation.end.message=Eind dag moet groter of gelijk zijn aan start dag
+feeAmount.validation.onsite.message=Bedrag (op locatie) is lager dan het reguliere bedrag
 
 # Participant state related messages
 participantState.label=Deelnemer status
@@ -488,10 +490,10 @@ email.edit.template.label=Wijzig template in een nieuw tabblad
 email.refresh.preview.label=Herlaad email preview
 email.not.yet.sent.label=Nog niet verzonden emails
 email.sent.label=Verzonden Emails
-email.date.created.label=Datum/tijd gecreëerd
+email.date.created.label=Datum/tijd gecreï¿½erd
 email.date.sent.label=Datum/tijd verzonden
 email.original.sent.label=Originele email verzonden
-email.copies.sent.label=Kopieën van deze email verzonden
+email.copies.sent.label=Kopieï¿½n van deze email verzonden
 email.background.message=Email voor {0} deelnemer(s) worden in de achtergrond verwerkt, u mag deze pagina verlaten
 
 # Order related messages
