--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -384,6 +384,7 @@ extra.description.label=Short description for users
 extra.secondDescription.label=Detailed description for users
 extra.amount.label=Amount
 extra.isFinalRegistration.label=Is part of the final registration instead of the pre-registration?
+extra.maxSeats.label=Max persons
 extra.sortOrder.label=Sort order
 extra.final.label=Extras list (final)
 extra.pre.label=Extras list (pre)
@@ -409,6 +410,13 @@ paper.file.upload.label=Upload paper
 paper.equipmentComment.label=Equipment comment
 paper.networks.sessions.info.label=Networks & Sessions information
 paper.validation.max.message=You exceeded the maximum number of papers allowed per participant
+
+paperList.label=Paper
+paperList.multiple.label=Papers
+paperList.title.label=Title
+paperList.networkProposal.label=Network proposal
+paperList.sessionProposal.label=Session proposal
+paperList.state.label=Paper state
 
 # Paper state related messages
 paperState.label=Paper state
