--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -384,6 +384,7 @@ extra.description.label=Korte beschrijving voor gebruikers
 extra.secondDescription.label=Uitgebreide beschrijving voor gebruikers
 extra.amount.label=Bedrag
 extra.isFinalRegistration.label=Is onderdeel van de final registration in plaats van de pre-registration?
+extra.maxSeats.label=Max personen
 extra.sortOrder.label=Sorteer volgorde
 extra.final.label=Extras lijst (final)
 extra.pre.label=Extras lijst (pre)
@@ -409,6 +410,13 @@ paper.file.upload.label=Upload document
 paper.equipmentComment.label=Apparatuur commentaar
 paper.networks.sessions.info.label=Netwerken & Sessies informatie
 paper.validation.max.message=U heeft het maximum van documenten per deelnemer al bereikt
+
+paperList.label=Paper
+paperList.multiple.label=Papers
+paperList.title.label=Title
+paperList.networkProposal.label=Network proposal
+paperList.sessionProposal.label=Session proposal
+paperList.state.label=Paper state
 
 # Paper state related messages
 paperState.label=Document status
