paperlist language strings should be dutch in messages_nl

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -411,12 +411,12 @@ paper.equipmentComment.label=Apparatuur commentaar
 paper.networks.sessions.info.label=Netwerken & Sessies informatie
 paper.validation.max.message=U heeft het maximum van documenten per deelnemer al bereikt
 
-paperList.label=Paper
-paperList.multiple.label=Papers
-paperList.title.label=Title
-paperList.networkProposal.label=Network proposal
-paperList.sessionProposal.label=Session proposal
-paperList.state.label=Paper state
+paperList.label=Document
+paperList.multiple.label=Documenten
+paperList.title.label=Titel
+paperList.networkProposal.label=Netwerk voorstel
+paperList.sessionProposal.label=Sessie voorstel
+paperList.state.label=Document status
 
 # Paper state related messages
 paperState.label=Document status
