Add two payment not completed filters in payments overview

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -544,6 +544,9 @@ payment.number.payed.label=Total payed
 payment.number.not.completed.label=Total payment not completed
 payment.number.no.attempt.label=Total without any payment attempts
 payment.go.to.statistics.label=Go to payment statistics
+payment.show.all=Show all participants
+payment.show.not.payed=Show all participants without any payment attempts
+payment.show.not.completed=Show all participants with an uncompleted payment
 
 # Misc related pages
 misc.lastNameUpperCase=Last name lower/upper case
