--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -542,6 +542,9 @@ payment.number.payed.label=Totaal betaald
 payment.number.not.completed.label=Totaal betaling niet afgerond
 payment.number.no.attempt.label=Totaal zonder enkele betalings poging
 payment.go.to.statistics.label=Ga naar betalingsstatistieken
+payment.show.all=Toon alle deelnemers
+payment.show.not.payed=Toon alle deelnemers zonder betalings pogingen
+payment.show.not.completed=Toon alle deelnemers met een betaling die nog niet is afgerond
 
 # Misc related pages
 misc.lastNameUpperCase=Last name lower/upper case
