--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -287,12 +287,15 @@ session.not.planned.label=Sessie is nog niet gepland
 session.unschedule.label=Schrap planning
 session.conflicts.searching.label=Op zoek naar conflicten in de huidige planning
 session.no.conflicts.label=Geen conflicten gevonden in de huidige planning
-session.conflics.found.label=De volgende conflicten zijn gevonden in de huidige planning:
+session.conflicts.found.label=De volgende conflicten zijn gevonden in de huidige planning:
 session.noShow.label=is niet beschikbaar op de geplande dag en tijd voor de sessies
 session.sessionConflict.label=is gepland op dezelfde dag en tijd in de sessies
 session.equipmentProblem.label=vereist apparatuur dat niet beschikbaar is op de geplande dag en tijd in de ruimte
 session.warnings.label=Sessie waarschuwingen
 session.noAuthorsFound.label=Geen auteurs gevonden in deze sessie!
+session.problems.label=Problemen
+session.alreadyPlannedProblem.label={0}: Tijdens dit tijd slot zijn de deelnemers {1} al gepland
+session.notPresentProblem.label={0}: Tijdens dit tijd slot zijn de deelnemers {1} niet aanwezig
 
 sessionList.label=Sessie
 sessionList.multiple.label=Sessies
