--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -294,8 +294,8 @@ session.equipmentProblem.label=requires equipment that is not available in the s
 session.warnings.label=Session warnings
 session.noAuthorsFound.label=No authors found in this session!
 session.problems.label=Problems
-session.alreadyPlannedProblem.label={0}: On this time slot the participant(s) {1} are already planned
-session.notPresentProblem.label={0}: On this time slot the participant(s) {1} are not present
+session.alreadyPlannedProblem.label={0}: On this time slot the participant(s) {1} is/are already planned
+session.notPresentProblem.label={0}: On this time slot the participant(s) {1} is/are not present
 
 sessionList.label=Session
 sessionList.multiple.label=Sessions
