--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -294,8 +294,8 @@ session.equipmentProblem.label=vereist apparatuur dat niet beschikbaar is op de 
 session.warnings.label=Sessie waarschuwingen
 session.noAuthorsFound.label=Geen auteurs gevonden in deze sessie!
 session.problems.label=Problemen
-session.alreadyPlannedProblem.label={0}: Tijdens dit tijd slot zijn de deelnemers {1} al gepland
-session.notPresentProblem.label={0}: Tijdens dit tijd slot zijn de deelnemers {1} niet aanwezig
+session.alreadyPlannedProblem.label={0}: Tijdens dit tijd slot is/zijn de deelnemer(s) {1} al gepland
+session.notPresentProblem.label={0}: Tijdens dit tijd slot is/zijn de deelnemer(s) {1} niet aanwezig
 
 sessionList.label=Sessie
 sessionList.multiple.label=Sessies
