Add session type

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -280,6 +280,7 @@ session.name.label=Name
 session.abstr.label=Abstract
 session.comment.label=Comment
 session.state.label=Session state
+session.type.label=Session type
 session.sessionParticipants.label=Participants in session
 session.mismatch.label=Mismatch session/paper state
 session.planned.label=Session is planned
@@ -302,6 +303,11 @@ sessionList.multiple.label=Sessions
 sessionList.code.label=Code
 sessionList.name.label=Name
 sessionList.state.label=Session state
+
+# Session type related messages
+sessionType.label=Session type
+sessionType.multiple.label=Session types
+sessionType.type.label=Type
 
 # Fee state related messages
 feeState.label=Fee state
