--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -280,6 +280,7 @@ session.name.label=Naam
 session.abstr.label=Abstract
 session.comment.label=Commentaar
 session.state.label=Sessie status
+session.type.label=Sessie type
 session.sessionParticipants.label=Deelnemers in sessie
 session.mismatch.label=Mismatch sessie/document status
 session.planned.label=Sessie is gepland
@@ -302,6 +303,11 @@ sessionList.multiple.label=Sessies
 sessionList.code.label=Code
 sessionList.name.label=Naam
 sessionList.state.label=Sessie status
+
+# Session type related messages
+sessionType.label=Sessie type
+sessionType.multiple.label=Sessie types
+sessionType.type.label=Type
 
 # Fee state related messages
 feeState.label=Vergoedingsstatus
