Add education field

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -194,6 +194,7 @@ user.fax.label=Fax
 user.mobile.label=Mobile phone
 user.organisation.label=Organisation
 user.department.label=Department
+user.education.label=Education
 user.cv.label=CV
 user.extraInfo.label=Extra information about person
 user.dateAdded.label=Date added
