--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -194,6 +194,7 @@ user.fax.label=Fax
 user.mobile.label=Mobiel nummer
 user.organisation.label=Organisatie
 user.department.label=Afdeling
+user.education.label=Opleiding
 user.cv.label=CV
 user.extraInfo.label=Extra informatie over persoon
 user.dateAdded.label=Datum toegevoegd
