Add age range support

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -256,6 +256,12 @@ title.label=Title
 title.multiple.label=Titles
 title.title.label=Title
 
+# Age range related messages
+ageRange.label=Age
+ageRange.multiple.label=Ages
+ageRange.minAge.label=Minimal age
+ageRange.maxAge.label=Maximal age
+
 # Room related messages
 room.label=Room
 room.multiple.label=Rooms
@@ -342,6 +348,7 @@ participantDate.multiple.label=Participants
 participantDate.state.label=Participant state
 participantDate.feeState.label=Fee state
 participantDate.dateAdded.label=Event date added
+participantDate.ageRange.label=Age
 participantDate.invitationLetterRequested.label=Requested
 participantDate.invitationLetterSent.label=Sent
 participantDate.invitationLetter.label=Invitation letter
@@ -356,6 +363,7 @@ participantDate.award.label=Participate for award
 participantDate.extraInfo.label=Extra information about current registration
 participantDate.registration.info.label=Registration info
 participantDate.personal.info.label=Personal info
+participantDate.personal.registration.label=Personal info (current registration)
 participantDate.extra.label=Extra
 participantDate.attendance.label=Attendance
 participantDate.volunteering.label=Volunteering
