--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -256,6 +256,12 @@ title.label=Titel
 title.multiple.label=Titels
 title.title.label=Titel
 
+# Age range related messages
+ageRange.label=Leeftijd
+ageRange.multiple.label=Leeftijden
+ageRange.minAge.label=Minimale leeftijd
+ageRange.maxAge.label=Maximale leeftijd
+
 # Room related messages
 room.label=Kamer
 room.multiple.label=Kamers
@@ -342,6 +348,7 @@ participantDate.multiple.label=Deelnemers
 participantDate.state.label=Deelnemer status
 participantDate.feeState.label=Vergoedingsstatus
 participantDate.dateAdded.label=Datum evenement toegevoegd
+participantDate.ageRange.label=Leeftijd
 participantDate.invitationLetterRequested.label=Aangevraagd
 participantDate.invitationLetterSent.label=Verzonden
 participantDate.invitationLetter.label=Uitnodigingsbrief
@@ -356,6 +363,7 @@ participantDate.award.label=Deelname voor award
 participantDate.extraInfo.label=Extra informatie over huidige registratie
 participantDate.registration.info.label=Registratie info
 participantDate.personal.info.label=Persoonlijke info
+participantDate.personal.registration.label=Persoonlijke info (huidige registratie)
 participantDate.extra.label=Extra
 participantDate.attendance.label=Aanwezigheid
 participantDate.volunteering.label=Vrijwillige taken
