Add type of contribution field for papers

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -418,6 +418,7 @@ paper.multiple.label=Papers
 paper.title.label=Title
 paper.coAuthors.label=Co-authors
 paper.abstr.label=Abstract
+paper.typeOfContribution.label=Type of contribution
 paper.comment.label=Additional comments
 paper.networkProposal.label=Network proposal
 paper.sessionProposal.label=Session proposal
