--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -418,6 +418,7 @@ paper.multiple.label=Documenten
 paper.title.label=Titel
 paper.coAuthors.label=Co-auteurs
 paper.abstr.label=Korte inhoud
+paper.typeOfContribution.label=Vorm van bijdrage
 paper.comment.label=Overig commentaar
 paper.networkProposal.label=Netwerk voorstel
 paper.sessionProposal.label=Sessie voorstel
