Also complete registration on sending pre registration email

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -509,7 +509,7 @@ email.test.label=Send test mail
 email.send.label=Send email
 email.send.multiple.label=Send emails
 email.resend.label=Resend email
-email.resend.registration.label=Resend registration completed email
+email.resend.registration.label=Complete registration and (re)send 'registration completed' email
 email.send.now.label=Send email now
 email.all.participants.label=Send to all qualified participants
 email.select.label=Select type of mail recipients
