Add link to online programme in menu and add trigger to clear the Hibernate cache

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -83,6 +83,7 @@ default.admin.menu.label=Admin menu \u00bb
 default.misc.menu.label=Misc \u00bb
 default.export.menu.label=Exporteer
 default.program.label=Programma overzicht
+default.online.programme.label=Online programma
 default.deleted.label=Verwijderen
 
 default.button.create.label=Invoeren
