Add support for managing paper reviews

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -39,7 +39,7 @@ default.totals.not.filtered=Total (without filters)
 default.last.updated=Last updated
 default.back.to.top=Back to top
 default.please.wait=Please wait...
-default.help.autocomplete.text=To search for a participant, please specify at least 3 characters!
+default.help.autocomplete.text=To search for a person, please specify at least 3 characters!
 
 default.created.message={0} "{1}" is created
 default.updated.message={0} "{1}" is updated
@@ -208,6 +208,8 @@ user.personalInfo.label=Personal information
 user.changePassword.label=Change password
 user.emailDiscontinued.label=Email discontinued
 user.no.country.label=No country found
+user.participant.label=User / Participant
+user.register.label=Also register as a participant?
 
 # Event related messages
 event.label=Event
@@ -425,6 +427,7 @@ paper.title.label=Title
 paper.coAuthors.label=Co-authors
 paper.abstr.label=Abstract
 paper.typeOfContribution.label=Type of contribution
+paper.reviewComment.label=Review comments
 paper.comment.label=Additional comments
 paper.networkProposal.label=Network proposal
 paper.sessionProposal.label=Session proposal
@@ -432,6 +435,11 @@ paper.proposalDescription.label=Proposal description
 paper.state.label=Paper state
 paper.file.label=Uploaded paper
 paper.file.upload.label=Upload paper
+paper.review.label=Review
+paper.reviews.label=Reviews
+paper.reviewer.label=Reviewer
+paper.reviewers.label=Reviewers
+paper.avgReviewScore.label=Average score
 paper.equipmentComment.label=Equipment comment
 paper.networks.sessions.info.label=Networks & Sessions information
 paper.validation.max.message=You exceeded the maximum number of papers allowed per participant
@@ -441,6 +449,8 @@ paperList.multiple.label=Papers
 paperList.title.label=Title
 paperList.networkProposal.label=Network proposal
 paperList.sessionProposal.label=Session proposal
+paperList.reviews.label=Reviews
+paperList.avgReviewScore.label=Average score
 paperList.state.label=Paper state
 
 # Paper state related messages
@@ -572,6 +582,12 @@ payment.go.to.statistics.label=Go to payment statistics
 payment.show.all=Show all participants
 payment.show.not.payed=Show all participants without any payment attempts
 payment.show.not.completed=Show all participants with an uncompleted payment
+
+# ReviewCriteria related messages
+reviewCriteria.label=Review criteria
+reviewCriteria.multiple.label=Review criteria
+reviewCriteria.name.label=Name
+reviewCriteria.sortOrder.label=Sort order
 
 # Misc related pages
 misc.lastNameUpperCase=Last name lower/upper case
