--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -39,7 +39,7 @@ default.totals.not.filtered=Totaal (zonder filters)
 default.last.updated=Laatste update
 default.back.to.top=Terug naar de top
 default.please.wait=\u00c9\u00e9n moment graag...
-default.help.autocomplete.text=Om een bepaalde deelnemer op te zoeken, astublieft minimaal 3 letters intikken!
+default.help.autocomplete.text=Om een bepaalde persoon op te zoeken, astublieft minimaal 3 letters intikken!
 
 default.created.message={0} "{1}" is ingevoerd
 default.updated.message={0} "{1}" is gewijzigd
@@ -208,6 +208,8 @@ user.personalInfo.label=Persoonlijke informatie
 user.changePassword.label=Wijzig wachtwoord
 user.emailDiscontinued.label=Email opgezegd
 user.no.country.label=Geen land gevonden
+user.participant.label=Gebruiker / Deelnemer
+user.register.label=Ook als deelnemer registeren?
 
 # Event related messages
 event.label=Evenement
@@ -425,6 +427,7 @@ paper.title.label=Titel
 paper.coAuthors.label=Co-auteurs
 paper.abstr.label=Korte inhoud
 paper.typeOfContribution.label=Vorm van bijdrage
+paper.reviewComment.label=Review commentaar
 paper.comment.label=Overig commentaar
 paper.networkProposal.label=Netwerk voorstel
 paper.sessionProposal.label=Sessie voorstel
@@ -432,6 +435,11 @@ paper.proposalDescription.label=Voorstel beschrijving
 paper.state.label=Document status
 paper.file.label=Ge\u00c3\u00bcploade document
 paper.file.upload.label=Upload document
+paper.review.label=Review
+paper.reviews.label=Reviews
+paper.reviewer.label=Reviewer
+paper.reviewers.label=Reviewers
+paper.avgReviewScore.label=Gemiddelde score
 paper.equipmentComment.label=Apparatuur commentaar
 paper.networks.sessions.info.label=Netwerken & Sessies informatie
 paper.validation.max.message=U heeft het maximum van documenten per deelnemer al bereikt
@@ -441,6 +449,8 @@ paperList.multiple.label=Documenten
 paperList.title.label=Titel
 paperList.networkProposal.label=Netwerk voorstel
 paperList.sessionProposal.label=Sessie voorstel
+paperList.review.label=Review
+paperList.avgReviewScore.label=Gemiddelde score
 paperList.state.label=Document status
 
 # Paper state related messages
@@ -570,6 +580,12 @@ payment.go.to.statistics.label=Ga naar betalingsstatistieken
 payment.show.all=Toon alle deelnemers
 payment.show.not.payed=Toon alle deelnemers zonder betalings pogingen
 payment.show.not.completed=Toon alle deelnemers met een betaling die nog niet is afgerond
+
+# ReviewCriteria related messages
+reviewCriteria.label=Beoordelings criteria
+reviewCriteria.multiple.label=Beoordelings criteria
+reviewCriteria.name.label=Naam
+reviewCriteria.sortOrder.label=Sorteer volgorde
 
 # Misc related pages
 misc.lastNameUpperCase=Last name lower/upper case
