New autocomplete for searching and selecting users

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -39,7 +39,7 @@ default.totals.not.filtered=Total (without filters)
 default.last.updated=Last updated
 default.back.to.top=Back to top
 default.please.wait=Please wait...
-default.help.autocomplete.text=To search for a person, please specify at least 3 characters!
+default.help.autocomplete.text=Search for a person by typing his/her name
 
 default.created.message={0} "{1}" is created
 default.updated.message={0} "{1}" is updated
