--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -39,7 +39,7 @@ default.totals.not.filtered=Totaal (zonder filters)
 default.last.updated=Laatste update
 default.back.to.top=Terug naar de top
 default.please.wait=\u00c9\u00e9n moment graag...
-default.help.autocomplete.text=Om een bepaalde persoon op te zoeken, astublieft minimaal 3 letters intikken!
+default.help.autocomplete.text=Zoek een bepaald persoon door zijn/haar naam in te tikken
 
 default.created.message={0} "{1}" is ingevoerd
 default.updated.message={0} "{1}" is gewijzigd
